Add nimtable stuff

--- a/content/post/iceberg-maintenance.adoc
+++ b/content/post/iceberg-maintenance.adoc
@@ -37,9 +37,21 @@ image::/images/2025/07/iceberg-metadata.webp[,width=500]
 
 Let's take a step back and look at what happens when you write some data to Iceberg.
 
+.*Try it out yourself!*
+[NOTE]
+====
+Use https://github.com/rmoff/examples/tree/main/iceberg/trino-polaris-minio[this Docker Compose] to bring up a local stack of:
+
+* Polaris (catalog)
+* MinIO (object store)
+* Trino (engine)
+* Spark (engine) and Jupyter (notebook)
+* Nimtable (catalog UI & maintenance)
+====
+
 == What happens when you write data to Iceberg?
 
-TIP: Alex Merced has a https://www.dremio.com/blog/the-life-of-a-write-query-for-apache-iceberg-tables/[good article about this].
+ℹ️ _For more in-depth notes on this subject, check out Alex Merced's https://www.dremio.com/blog/the-life-of-a-write-query-for-apache-iceberg-tables/[article]_.
 
 When you first create a table:
 
@@ -849,6 +861,47 @@ trino:rmoff> SELECT * FROM "customers$snapshots";
  2025-07-14 14:44:42.232 UTC | 4056286565502898119 | 2039216781855207414 | replace
 ----
 
+== Other table maintenance options
+
+=== Apache Amoro
+
+https://amoro.apache.org/[Apache Amoro] (incubating) is a new project that offers an Iceberg catalog with https://amoro.apache.org//quick-start/#check-self-optimizing[built-in optimisation].
+
+=== AWS
+
+* https://docs.aws.amazon.com/AmazonS3/latest/userguide/s3-tables.html[S3 Tables] supports https://docs.aws.amazon.com/AmazonS3/latest/userguide/s3-tables-maintenance.html[built-in table maintenance].
+* https://docs.aws.amazon.com/glue/latest/dg/populate-otf.html[AWS Glue Data Catalog] provides https://docs.aws.amazon.com/glue/latest/dg/enable-compaction.html[compaction].
+
+=== Nimtable
+
+https://github.com/nimtable/nimtable[Nimtable] is an Apache 2.0 licensed project that was released around June this year.
+It offers table compaction as part of its offering as a "Control Plane for Apache Iceberg".
+
+Once you've connected it to an existing catalog (such as Polaris) it shows you the contents of the catalog:
+
+image::/images/2025/07/2025-07-15T14-13-38-360Z.png[]
+
+It analyses the tables (presumably using similar heuristics as described above) to identify if they need optimising, and provides details of its analysis too:
+
+image::/images/2025/07/2025-07-15T14-15-56-975Z.png[]
+
+There's also the obligatory +++<del>+++magic fairy dust+++</del>+++ AI sprinkled onto it which puts the analysis into words.
+
+As well as the textual analysis there's a nice visualisation showing the rate of growth over time, broken down by type of change (insert/update/delete)
+
+image::/images/2025/07/2025-07-15T14-18-23-597Z.png[]
+
+For tables that do need optimising you can run a one-off job, or set it to run on a schedule
+
+image::/images/2025/07/2025-07-15T14-18-47-488Z.png[]
+
+Finally, it also includes a SQL editor which is a nice touch.
+
+image::/images/2025/07/2025-07-15T14-24-19-915Z.png[]
+
+I've only had a quick poke around, but the UI is nice and the analysis definitely useful to have.
+And whilst I've not tried it, if it behaves as claimed, the automatic optimisation could be a really nice tool if you're self-managing your Iceberg files.
+
 == Further reading
 
 * https://www.tabular.io/apache-iceberg-cookbook/data-operations-compaction/[File compaction - Tabular]
@@ -857,19 +910,3 @@ trino:rmoff> SELECT * FROM "customers$snapshots";
 * https://medium.com/ancestry-product-and-technology/solving-the-small-file-problem-in-iceberg-tables-6c31a295f724[Solving the Small File Problem in Iceberg Tables - Thomas Cardenas]
 * https://www.oreilly.com/library/view/apache-iceberg-the/9781098148614/ch04.html[Apache Iceberg: The Definitive Guide - Chapter 4. Optimizing the Performance of Iceberg Tables]
 * https://www.starburst.io/blog/apache-iceberg-files/[The file explosion problem in Apache Iceberg and what to do when it happens to you - Daniel Abadi]
-
-== Other table maintenance options
-
-* https://amoro.apache.org/[Apache Amoro] is a new project that offers an Iceberg catalog with https://amoro.apache.org//quick-start/#check-self-optimizing[built-in optimisation].
-* https://github.com/nimtable/[Nimtable] is also a new project, providing table compaction.
-* https://docs.aws.amazon.com/AmazonS3/latest/userguide/s3-tables.html[S3 Tables] supports https://docs.aws.amazon.com/AmazonS3/latest/userguide/s3-tables-maintenance.html[built-in table maintenance].
-* https://docs.aws.amazon.com/glue/latest/dg/populate-otf.html[AWS Glue Data Catalog] provides https://docs.aws.amazon.com/glue/latest/dg/enable-compaction.html[compaction].
-
-== Try it out yourself
-
-Use https://github.com/rmoff/examples/tree/main/iceberg/trino-polaris-minio[this Docker Compose] to bring up a local stack of:
-
-* Polaris (catalog)
-* MinIO (object store)
-* Trino (engine)
-* Spark (engine) and Jupyter (notebook)
