--- a/content/post/iceberg-maintenance.adoc
+++ b/content/post/iceberg-maintenance.adoc
@@ -37,17 +37,14 @@ image::/images/2025/07/iceberg-metadata.webp[,width=500]
 
 Let's take a step back and look at what happens when you write some data to Iceberg.
 
-.*Try it out yourself!*
-[NOTE]
-====
-Use https://github.com/rmoff/examples/tree/main/iceberg/trino-polaris-minio[this Docker Compose] to bring up a local stack of:
+== Do try this at home!
 
-* Polaris (catalog)
-* MinIO (object store)
-* Trino (engine)
-* Spark (engine) and Jupyter (notebook)
-* Nimtable (catalog UI & maintenance)
-====
+If you want to try this at home and follow along as you read the blog post, you can use https://github.com/rmoff/examples/tree/main/iceberg/trino-polaris-minio[this Docker Compose] to bring up a local stack of:
+
+* https://polaris.apache.org/[Polaris] (catalog)
+* https://min.io/[MinIO] (object store)
+* https://trino.io[Trino] (engine) & https://spark.apache.org[Spark] (engine) and https://jupyter.org/[Jupyter] (notebook)
+* https://github.com/nimtable/nimtable[Nimtable] (catalog UI & maintenance)
 
 == What happens when you write data to Iceberg?
 
