--- a/content/post/il-2025-07.adoc
+++ b/content/post/il-2025-07.adoc
@@ -96,7 +96,7 @@ _Nothing to do with data, but stuff that I've found interesting or has made me s
 * Elena Verna writes up https://www.elenaverna.com/p/here-is-how-i-approach-starting-a[her playbook for the first 30, 60, 90 days of a new job].
 * Charity Majors is one of my favourite writers, and https://charity.wtf/2025/07/09/thoughts-on-motivation-and-my-40-year-career/[her recent blog post] is a great example.
 It's genuine, it's articulate (and it reminds me of _real blogging_ that used to be the norm and is getting swamped these days in AI slop and SEO-chasing bullshit).
-* If you're as old as me you'll enjoy this blast of nostalgia courtesy of the Internet Archive's https://blog.archive.org/2025/06/09/keep-on-gifin-a-new-version-of-gifcities-internet-archives-geocities-animated-gif-search-engine/[GeoCities GIF search engine] (_and FTR, it's *always* "GIF", never "JIF"_ 😜).
+* If you're as old as me you'll enjoy this blast of nostalgia courtesy of the Internet Archive's https://blog.archive.org/2025/06/09/keep-on-gifin-a-new-version-of-gifcities-internet-archives-geocities-animated-gif-search-engine/[GeoCities GIF search engine] (_and FTR, it's *always* `/ɡɪf/`, never `/dʒɪf/` 😜_).
 
 ---
 
