--- a/content/post/il-2025-07.adoc
+++ b/content/post/il-2025-07.adoc
@@ -17,7 +17,7 @@ First up, allow me a shameless plug for my blog posts this month:
 
 * https://rmoff.net/2025/07/04/writing-to-apache-iceberg-on-s3-using-kafka-connect-with-glue-catalog/[Writing to **Apache Iceberg on S3 using Kafka Connect** with Glue catalog].
 * https://rmoff.net/2025/07/14/keeping-your-data-lakehouse-in-order-table-maintenance-in-apache-iceberg/[Keeping your Data Lakehouse in Order: **Table Maintenance in Apache Iceberg**].
-* https://www.confluent.io/blog/streaming-etl-flink-tableflow/[Building Streaming Data Pipelines, Part 2: **Data Processing and Enrichment with Flink SQL**] (see also https://www.confluent.io/blog/building-streaming-data-pipelines-part-1/[Part 1])
+* 🔥 https://www.confluent.io/blog/streaming-etl-flink-tableflow/[Building Streaming Data Pipelines, Part 2: **Data Processing and Enrichment with Flink SQL**] (see also https://www.confluent.io/blog/building-streaming-data-pipelines-part-1/[Part 1])
 
 And with that, on to this month's set of https://rmoff.net/categories/interesting-links/[Interesting Links].
 
@@ -28,7 +28,7 @@ Yay for the open internet 🙄.
 
 * A nice hands-on example of Sanchit Vijay showing how to use Spark to https://freedium.cfd/https://blog.dataengineerthings.org/dare-2-cross-cloud-storage-adventure-s3-r2-d68ed61faece[move data from AWS S3 to Cloudflare R2].
 * Interesting details on the Apache DataFusion blog about https://datafusion.apache.org/blog/2025/07/14/user-defined-parquet-indexes/[embedding User-Defined Indexes in Apache Parquet Files].
-* My colleague Gilles Philippart wrote up a good guide on getting https://freedium.cfd/https://medium.com/@gilles.philippart/build-a-data-lakehouse-with-apache-iceberg-polaris-trino-minio-349c534ecd98[Apache Iceberg, Polaris, Trino, and MinIO] running together locally.
+* 🔥 My colleague Gilles Philippart wrote up a good guide on getting https://freedium.cfd/https://medium.com/@gilles.philippart/build-a-data-lakehouse-with-apache-iceberg-polaris-trino-minio-349c534ecd98[Apache Iceberg, Polaris, Trino, and MinIO] running together locally.
 * In _Lakehouse 2.0: The Open System That Lakehouse 1.0 Was Meant to Be_, Animesh Kumar & Travis Thompson discuss the history of the lakehouse and its evolution from closed formats and ecosystems to open formats and interchangable engines https://freedium.cfd/https://medium.com/@community_md101/lakehouse-2-0-the-open-system-that-lakehouse-1-0-was-meant-to-be-part-1-743efc645ea6[Part 1] & https://freedium.cfd/https://medium.com/@community_md101/introducing-lakehouse-2-0-what-changes-769a1c6a758e[Part 2].
 * Data contracts are a good idea, as is standardising them—of which the https://github.com/bitol-io/open-data-contract-standard[Open Data Contract Standard (ODCS)] is an example.
 * Jaehyeon Kim looks at https://jaehyeon.me/blog/2025-07-17-self-service-data-platform-via-sql-gateway/[how Apache Kyuubi provides a gateway] between end users and applications, and multiple database engines including Flink, Spark, and Trino.
@@ -37,7 +37,7 @@ Yay for the open internet 🙄.
 
 * Daniel Beach shows how you can use https://dataengineeringcentral.substack.com/p/apache-iceberg-on-databricks[Apache Iceberg on Databricks].
 * Amazon S3 now supports https://aws.amazon.com/blogs/big-data/compaction-support-for-avro-and-orc-file-formats-in-apache-iceberg-tables-in-amazon-s3/[compaction for Avro and ORC file formats in Apache Iceberg tables].
-* Thomas Kejser a.k.a. The Database Doctor gives us his spicy take on **Iceberg, The Right Idea - The Wrong Spec** - https://database-doctor.com/posts/iceberg-is-wrong-1.html[Part 1: History] / https://database-doctor.com/posts/iceberg-is-wrong-2.html[Part 2: The Spec].
+* 🔥 Thomas Kejser a.k.a. The Database Doctor gives us his spicy take on **Iceberg, The Right Idea - The Wrong Spec** - https://database-doctor.com/posts/iceberg-is-wrong-1.html[Part 1: History] / https://database-doctor.com/posts/iceberg-is-wrong-2.html[Part 2: The Spec].
 Some will argue that at times veracity takes the back seat to telling a rollicking good story—but it's a fun read regardless of which side of the debate you sit.
 * Rahul Joshi explains https://medium.com/capital-one-tech/delta-lake-transaction-logs-explained-6b5f036e64e2[Delta Lake transaction logs].
 * Badal Prasad Singh tells us all about https://olake.io/iceberg/iceberg-partitioning-and-writing-strategies[Iceberg Partitioning and Partitioning Writing Strategies].
@@ -45,7 +45,7 @@ Some will argue that at times veracity takes the back seat to telling a rollicki
 
 == CDC
 
-* Debezium is widely used these days, making Vojtěch Juránek's article about https://debezium.io/blog/2025/07/07/quick-perf-check/[improving Debezium performance] a useful reference.
+* 🔥 Debezium is widely used these days, making Vojtěch Juránek's article about https://debezium.io/blog/2025/07/07/quick-perf-check/[improving Debezium performance] a useful reference.
 * Abhishek Vishnoi has a hands-on guide that shows https://freedium.cfd/https://medium.com/@vishnoiabhishek1/how-to-implement-a-debezium-custom-converter-d203e3b9fb65[how to implement a custom converter in Debezium].
 * An excellent blog post as always from Gunnar Morling, this time looking at https://www.morling.dev/blog/mastering-postgres-replication-slots/[Postgres Replication Slots: Preventing WAL Bloat and Other Production Issues].
 * Debezium https://debezium.io/blog/2025/07/09/debezium-3-2-final-released/[3.2.0.Final Released]
@@ -54,7 +54,7 @@ Some will argue that at times veracity takes the back seat to telling a rollicki
 
 * _Is it even an edition of Interesting Links if there's not a new Kafka clone, either in a different language or deployed using a different architecture?_
 This month, Ravi Atluri writes about https://freedium.cfd/https://medium.com/gojekengineering/introducing-xkafka-kafka-but-simpler-for-go-91f4ce3edade[xkafka — Kafka, but Simpler (for Go)].
-* Mark Teehan has built https://freedium.cfd/https://medium.com/@streamsend/a-fancy-way-to-send-a-file-streaming-files-through-kafka-topics-4278fed4bf12[a fancy way to send a file: Streaming Files Through Kafka topics].
+* 🔥 Mark Teehan has built https://freedium.cfd/https://medium.com/@streamsend/a-fancy-way-to-send-a-file-streaming-files-through-kafka-topics-4278fed4bf12[a fancy way to send a file: Streaming Files Through Kafka topics].
 
 == Stream Processing
 
@@ -69,7 +69,7 @@ This month, Ravi Atluri writes about https://freedium.cfd/https://medium.com/goj
 * Some people read manuals to learn, but if you're like me and like learning through doing the https://www.sqlnoir.com/[SQL Noir] online game is a thriller in which you solve puzzles using SQL skills that you develop.
 If this is your kind of thing you'll also like this https://www.sqlnoir.com/blog/games-to-learn-sql[list of SQL games] that SQL Noir also published.
 * Are data warehouses a good idea? Definitely. Does everyone need one on day one? Nope. Aleksei Aleinikov has some wise words on https://freedium.cfd/https://medium.com/data-engineer-things/five-signs-you-can-skip-the-dwh-in-2025-2078e000faec[when the right time is—and isn't—to build one].
-* Despite the "listicle" title—_which would normally have me clicking away faster than https://www.reddit.com/r/interestingasfuck/s/HZz0CsC1ye[Andy Byron can hide from a camera]_—this article from Bernd Wessely has some excellent points in it: https://freedium.cfd/https://medium.com/data-engineer-things/unlearning-data-architecture-10-myths-worth-killing-946e728f1acf[Unlearning Data Architecture: 10 Myths Worth Killing].
+* 🔥 Despite the "listicle" title—_which would normally have me clicking away faster than https://www.reddit.com/r/interestingasfuck/s/HZz0CsC1ye[Andy Byron can hide from a camera]_—this article from Bernd Wessely has some excellent points in it: https://freedium.cfd/https://medium.com/data-engineer-things/unlearning-data-architecture-10-myths-worth-killing-946e728f1acf[Unlearning Data Architecture: 10 Myths Worth Killing].
 * Ben Dicken explains https://planetscale.com/blog/caching[caching] in this article with nice animations.
 * Dominik Tornow has a good https://dtornow.substack.com/p/jepsen-and-tigerbeetle[analysis and commentary] on the findings of the recent https://jepsen.io/analyses/tigerbeetle-0.16.11[Jepsen testing of TigerBeetle].
 * Interesting papers:
@@ -86,7 +86,7 @@ If this is your kind of thing you'll also like this https://www.sqlnoir.com/blog
 * *Peloton* - https://hudi.apache.org/blog/2025/07/15/modernizing-datainfra-peloton-hudi/[Modernizing Data Infrastructure].
 * *Stifel* - https://aws.amazon.com/blogs/big-data/how-stifel-built-a-modern-data-platform-using-aws-glue-and-an-event-driven-domain-architecture/[Building a modern data platform using AWS Glue and an event-driven domain architecture].
 * *Pinterest* - https://medium.com/pinterest-engineering/next-gen-data-processing-at-massive-scale-at-pinterest-with-moka-part-1-of-2-39a36d5e82c4[Next Gen Data Processing at Massive Scale (Part 1 of 2)].
-* *Datadog* - https://www.datadoghq.com/blog/engineering/reliable-log-delivery/[How we built reliable log delivery to thousands of unpredictable endpoints].
+* 🔥 *Datadog* - https://www.datadoghq.com/blog/engineering/reliable-log-delivery/[How we built reliable log delivery to thousands of unpredictable endpoints].
 * *Lion* - https://freedium.cfd/https://medium.com/data-engineer-things/how-we-built-the-aws-data-analytics-platform-part-1-b4c798d17094[How We Built the AWS Data & Analytics Platform (Part 1)].
 
 == And finally…
@@ -94,7 +94,7 @@ If this is your kind of thing you'll also like this https://www.sqlnoir.com/blog
 _Nothing to do with data, but stuff that I've found interesting or has made me smile._
 
 * Elena Verna writes up https://www.elenaverna.com/p/here-is-how-i-approach-starting-a[her playbook for the first 30, 60, 90 days of a new job].
-* Charity Majors is one of my favourite writers, and https://charity.wtf/2025/07/09/thoughts-on-motivation-and-my-40-year-career/[her recent blog post] is a great example.
+* 🔥 Charity Majors is one of my favourite writers, and https://charity.wtf/2025/07/09/thoughts-on-motivation-and-my-40-year-career/[her recent blog post] is a great example.
 It's genuine, it's articulate (and it reminds me of _real blogging_ that used to be the norm and is getting swamped these days in AI slop and SEO-chasing bullshit).
 * If you're as old as me you'll enjoy this blast of nostalgia courtesy of the Internet Archive's https://blog.archive.org/2025/06/09/keep-on-gifin-a-new-version-of-gifcities-internet-archives-geocities-animated-gif-search-engine/[GeoCities GIF search engine] (_and FTR, it's *always* `/ɡɪf/`, never `/dʒɪf/` 😜_).
 
