--- a/content/post/kafka-to-iceberg.adoc
+++ b/content/post/kafka-to-iceberg.adoc
@@ -415,7 +415,7 @@ Tableflow includes https://docs.confluent.io/cloud/current/topics/tableflow/over
 
 There's a reason I gave a conference talk called https://talks.rmoff.net/9GpIYA/the-joy-of-jars-and-other-flink-sql-troubleshooting-tales[_The Joy of JARs_].
 
-image::/images/2025/08/my-god-it-is-full-of-java.jpg[My God, It's full of Java]
+image::/images/2025/08/my-god-it-is-full-of-java.webp[My God, It's full of Java]
 
 Flink SQL is SQL on the surface, but link:/2025/06/24/writing-to-apache-iceberg-on-s3-using-flink-sql-with-glue-catalog/#_random_jiggling_hadoop_jars[a moras of Java underneath], which matters for user and operator alike.
 If you're already using Flink SQL then you'll know what I'm talking about.
@@ -429,7 +429,7 @@ Use https://github.com/kcctl/kcctl[kcctl] to make your life easier.
 Tableflow is ridiculously simple to use.
 Click "Enable Tableflow", and that's it.
 
-image::/images/2025/08/tableflow.png[]
+image::/images/2025/08/tableflow.webp[]
 
 You can use the Confluent CLI instead if you'd rather:
 [source,bash]
