--- a/content/post/kafka-to-iceberg.adoc
+++ b/content/post/kafka-to-iceberg.adoc
@@ -24,7 +24,7 @@ You want to get that data into https://www.youtube.com/watch?v=TsmhRZElPvM[Apach
 
 What's the best way to do it?
 
-image::/images/2025/08/kafka-to-iceberg.excalidraw.png[]
+image::/images/2025/08/kafka-to-iceberg.png[]
 
 Perhaps invariably, the answer is: *IT DEPENDS*.
 But fear not: here is a guide to help you navigate your way to chosing the best solution _for you_ 🫵.
@@ -474,6 +474,9 @@ As well as Flink SQL, Kafka Connect, and Tableflow, other options include:
 There's no source connector for Kafka, but if your data is coming from https://nightlies.apache.org/flink/flink-cdc-docs-master/docs/connectors/pipeline-connectors/postgres/[Postgres] or https://nightlies.apache.org/flink/flink-cdc-docs-master/docs/connectors/pipeline-connectors/mysql/[MySQL] this might be an interesting option to look into.
 * The https://memiiso.github.io/debezium-server-iceberg/[Debezium Iceberg Consumer] is a community project that integrates with Debezium Server as a sink to Iceberg.
 Similar to Flink CDC Pipelines, you'd not use it for reading from Kafka but it you've got a Debezium-supported RDBMS as source and you're not already running Kafka, this could be worth a look.
+* Aiven recently published https://github.com/Aiven-Open/tiered-storage-for-apache-kafka/blob/main/iceberg_whitepaper.md#upcoming-work[a whitepaper] describing `Iceberg Topics for Apache Kafka`.
+It's very early days and it has yet to be proved in production, and has significant gaps including lack of schema evolution.
+It'll be interesting to see how the project develops and the traction that it'll get.
 
 == tl;dr
 
