--- a/content/post/kafka-to-iceberg.adoc
+++ b/content/post/kafka-to-iceberg.adoc
@@ -27,7 +27,7 @@ What's the best way to do it?
 image::/images/2025/08/kafka-to-iceberg.png[]
 
 Perhaps invariably, the answer is: *IT DEPENDS*.
-But fear not: here is a guide to help you navigate your way to chosing the best solution _for you_ 🫵.
+But fear not: here is a guide to help you navigate your way to choosing the best solution _for you_ 🫵.
 
 <!--more-->
 
@@ -39,7 +39,7 @@ I'm considering three technologies in this blog post:
 * https://nightlies.apache.org/flink/flink-docs-master/docs/dev/table/sql/gettingstarted/#hello-world[Apache Flink SQL] (open source)
 * https://www.confluent.io/product/tableflow/[Confluent Tableflow] ($)
 
-There are others, and I'll mention those link:#_but_whatabout_this_other_tool[at the end].
+There are others, and I'll mention those link:#_but_what_about_this_other_tool[at the end].
 The one that I've really not looked at, and is perhaps conspicuous by its absence, is Apache Spark.
 If you're interested in Spark, check out https://www.youtube.com/watch?v=5pXfznKniGg[this video from Danica Fine] in which she covers it.
 
@@ -49,7 +49,7 @@ NOTE: _Disclaimer: I work for Confluent, but will do my best to remain impartial
 == The Approach
 
 I've framed this blog post around the key areas that you can use as the basis for making your decision.
-Some of these will be show-stoppers and rule a particular option out, whilst others simply gentle nudges that one tool might be preferred over another.
+Some of these will be show-stoppers and rule a particular option out, whilst others are simply gentle nudges that one tool might be preferred over another.
 
 I'm going to break the areas of consideration down into two (and a bit) areas:
 
@@ -68,7 +68,7 @@ TIP: Read more: link:/2025/06/24/writing-to-apache-iceberg-on-s3-using-flink-sql
 Flink SQL jobs run on a Flink cluster.
 They do not require Kafka (unless you are specifically reading or writing to it—such as in this article).
 
-Source and targets are defined as tables using DDL, with the intgration (such as Kafka or Iceberg) specified as a connector type.
+Source and targets are defined as tables using DDL, with the integration (such as Kafka or Iceberg) specified as a connector type.
 Target tables are loaded as a stream using either `CREATE TABLE … AS SELECT` or a standalone `INSERT INTO` after defining the target table first.
 
 There are some https://nightlies.apache.org/flink/flink-docs-master/docs/connectors/table/overview/#supported-connectors[connectors available within Flink], along with notable standalone connectors including https://nightlies.apache.org/flink/flink-cdc-docs-master/docs/connectors/flink-sources/overview/[Flink CDC].
@@ -76,7 +76,7 @@ There are some https://nightlies.apache.org/flink/flink-docs-master/docs/connect
 
 === Kafka Connect
 
-TIP: Read more: link:link:/2025/07/04/writing-to-apache-iceberg-on-s3-using-kafka-connect-with-glue-catalog/[Writing to Apache Iceberg using Kafka Connect]
+TIP: Read more: link:/2025/07/04/writing-to-apache-iceberg-on-s3-using-kafka-connect-with-glue-catalog/[Writing to Apache Iceberg using Kafka Connect]
 
 Kafka Connect runs on a Kafka Connect worker cluster.
 It is a pluggable ecosystem, providing an integration runtime that handles common tasks whilst individual connectors handle the technology-specific requirements.
@@ -230,7 +230,7 @@ Similarly, fan-out can be done using Flink to route the source topics into multi
 
 image::/images/2025/08/tf-flink-fan-out.excalidraw.png[]
 
-=== Wither Schema?
+=== Whither Schema?
 
 Sure, your data has a schema.
 But does it have a _schema_?
@@ -334,7 +334,7 @@ Flink SQL can also do stateless processing (filtering, schema projection, etc) t
 You'll sometimes find with Single Message Transforms that there's a particular transformation that you need and it just doesn't exist yet.
 
 Kafka Connect can do _stateless_ processing using Single Message Transforms.
-These are configured through bits of JSON configuration, and whilst not the most intuitive way to express a transformation, they are remarkable powerful.
+These are configured through bits of JSON configuration, and whilst not the most intuitive way to express a transformation, they are remarkably powerful.
 For example, to drop named fields from the source table so that they aren't included in the Iceberg table schema, you'd add this to your connector configuration:
 
 [source,javascript]
@@ -348,14 +348,14 @@ For example, to drop named fields from the source table so that they aren't incl
 }
 ----
 
-There are lots of other transformations available, many part of Apache Kafka itself, other provided by the community.
+There are lots of other transformations available, many part of Apache Kafka itself, others provided by the community.
 I wrote a blog series about these previously: link:/categories/twelvedaysofsmt/[Twelve Days of SMT]
 
 Tableflow is part of Confluent Cloud which means you already have access to Confluent Cloud for Apache Flink for your processing—the best of both worlds!
 
 image::/images/2025/08/tf-flink.excalidraw.png[]
 
-If your Kafka data is coming from Kafka Connect upstream using a managed connector in Confluent Cloud you can also use Single Message Transform at ingest.
+If your Kafka data is coming from Kafka Connect upstream using a managed connector in Confluent Cloud you can also use Single Message Transforms at ingest.
 
 === `INSERT OVERWRITE` and `UPSERT`
 
@@ -392,7 +392,7 @@ https://iceberg.apache.org/docs/nightly/kafka-connect/#requirements[Kafka Connec
 So far I've looked at the areas to think about with regards to the data that you're sending to Iceberg.
 That's only part of the puzzle though.
 It might be a fun science experiment to put together random technologies based on their feature-support alone, but in the real world we have to live with the design choices we make too.
-Let's look at some more factors to including in our weighing up of options.
+Let's look at some more factors to include in our weighing up of options.
 
 === Existing Ecosystem
 
@@ -417,7 +417,7 @@ There's a reason I gave a conference talk called https://talks.rmoff.net/9GpIYA/
 
 image::/images/2025/08/my-god-it-is-full-of-java.webp[My God, It's full of Java]
 
-Flink SQL is SQL on the surface, but link:/2025/06/24/writing-to-apache-iceberg-on-s3-using-flink-sql-with-glue-catalog/#_random_jiggling_hadoop_jars[a moras of Java underneath], which matters for user and operator alike.
+Flink SQL is SQL on the surface, but link:/2025/06/24/writing-to-apache-iceberg-on-s3-using-flink-sql-with-glue-catalog/#_random_jiggling_hadoop_jars[a morass of Java underneath], which matters for users and operators alike.
 If you're already using Flink SQL then you'll know what I'm talking about.
 If you're not and you're looking for a warm fuzzy SQL-embrace, forget it.
 
@@ -449,7 +449,7 @@ Plenty of people do this so you'll not have a shortage of content online to help
 Apache Flink, Apache Kafka (of which Kafka Connect is part), and the Apache Iceberg connector for Kafka Connect are all Apache 2.0 open source, owned by the Apache Software Foundation.
 You're free to run them and modify them as you want (and you're also then reliant on the community for any support requirements).
 
-Tableflow is a propriatory component of Confluent Cloud and usage of it is https://docs.confluent.io/cloud/current/topics/tableflow/concepts/tableflow-billing.html[billed].
+Tableflow is a proprietary component of Confluent Cloud and usage of it is https://docs.confluent.io/cloud/current/topics/tableflow/concepts/tableflow-billing.html[billed].
 
 == I used to be indecisive…now I'm not so sure…
 
@@ -463,7 +463,7 @@ The https://github.com/delta-io/kafka-delta-ingest[`kafka-delta-ingest`] project
 
 Tableflow https://docs.confluent.io/cloud/current/topics/tableflow/overview.html#tableflow-and-delta-lake-tables[has support] for both Apache Iceberg and Delta Lake.
 
-== bUt wHaTaBoUt tHiS oThEr tOoL?
+== bUt wHaT aBoUt tHiS oThEr tOoL?
 
 The aim of this blog post is not to give a comprehensive listing of all the ways of getting data into Iceberg from Kafka, but to look in more detail at the most common options that I see in use.
 
@@ -473,9 +473,9 @@ As well as Flink SQL, Kafka Connect, and Tableflow, other options include:
 * Flink CDC added a https://nightlies.apache.org/flink/flink-cdc-docs-master/docs/connectors/pipeline-connectors/iceberg/[pipeline connector for Iceberg] in the 3.5 release.
 There's no source connector for Kafka, but if your data is coming from https://nightlies.apache.org/flink/flink-cdc-docs-master/docs/connectors/pipeline-connectors/postgres/[Postgres] or https://nightlies.apache.org/flink/flink-cdc-docs-master/docs/connectors/pipeline-connectors/mysql/[MySQL] this might be an interesting option to look into.
 * The https://memiiso.github.io/debezium-server-iceberg/[Debezium Iceberg Consumer] is a community project that integrates with Debezium Server as a sink to Iceberg.
-Similar to Flink CDC Pipelines, you'd not use it for reading from Kafka but it you've got a Debezium-supported RDBMS as source and you're not already running Kafka, this could be worth a look.
+Similar to Flink CDC Pipelines, you'd not use it for reading from Kafka but if you've got a Debezium-supported RDBMS as source and you're not already running Kafka, this could be worth a look.
 * Aiven recently published https://github.com/Aiven-Open/tiered-storage-for-apache-kafka/blob/main/iceberg_whitepaper.md#upcoming-work[a whitepaper] describing `Iceberg Topics for Apache Kafka`.
-It's very early days and it has yet to be proved in production, and has significant gaps including lack of schema evolution.
+It's very early days and it has yet to be proven in production, and has significant gaps including lack of schema evolution.
 It'll be interesting to see how the project develops and the traction that it'll get.
 
 == tl;dr
@@ -486,7 +486,7 @@ If you just need a "dumb pipe" it's less easy to justify.
 If you want to do stateful processing you'll want to pair it with a stream processor (hey, such as Flink SQL!).
 * Tableflow is a fully-managed tool for getting data from Kafka into Iceberg.
 It's part of Confluent Cloud so you also have access to Flink SQL through Confluent Cloud for Apache Flink if you want to pre-process any of the data before sending it to Iceberg.
-Tableflow includes table maintenance, which you'd have to do yourself if using Flink SQL or Kafka Connect to send the data it Iceberg.
+Tableflow includes table maintenance, which you'd have to do yourself if using Flink SQL or Kafka Connect to send the data to Iceberg.
 
 == References
 
